Added webpack image and sass bundle config

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import '_design_vars';
-
+@import './stylesheets/placeholders/flex-helpers.scss';
+@import './stylesheets/design_vars.scss';
 html {
    h1, h2, h3, h4, h5, h6, h7, p {
       font-weight: 400;
