--- a/src/stylesheets/_design_vars.scss
+++ b/src/stylesheets/_design_vars.scss
@@ -11,12 +11,12 @@ $weights: 'Bold', 'Book', 'Medium';
 @each $weight in $weights {
   @font-face {
     font-family: 'PostGrotesk-#{$weight}';
-    src: url('../fonts/PostGrotesk-#{$weight}.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/PostGrotesk-#{$weight}.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/PostGrotesk-#{$weight}.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/PostGrotesk-#{$weight}.woff') format('woff'), /* Pretty Modern Browsers */
-         url('../fonts/PostGrotesk-#{$weight}.ttf')  format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/PostGrotesk-#{$weight}.svg#svgFontName') format('svg'); /* Legacy iOS */
+    src: url('~/src/fonts/PostGrotesk-#{$weight}.eot'); /* IE9 Compat Modes */
+    src: url('~/src/fonts/PostGrotesk-#{$weight}.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('~/src/fonts/PostGrotesk-#{$weight}.woff2') format('woff2'), /* Super Modern Browsers */
+         url('~/src/fonts/PostGrotesk-#{$weight}.woff') format('woff'), /* Pretty Modern Browsers */
+         url('~/src/fonts/PostGrotesk-#{$weight}.ttf')  format('truetype'), /* Safari, Android, iOS */
+         url('~/src/fonts/PostGrotesk-#{$weight}.svg#svgFontName') format('svg'); /* Legacy iOS */
   }
 }
 
