--- a/src/components/shared/verificationModal.scss
+++ b/src/components/shared/verificationModal.scss
@@ -51,6 +51,9 @@
     @extend %amm-flex-row;
     align-items: center;   
   }
+  .cf-button {
+    margin-top: 0px;
+  }
   .but-2 {
     margin-left: 16px;
   }
