--- a/src/assets/stylesheets/currency_flags.scss
+++ b/src/assets/stylesheets/currency_flags.scss
@@ -3,173 +3,10 @@ html {
     display: inline-block;
     width: 24px;
     height: 16px;
+    max-width: 24px;
+    max-height: 16px;
+    overflow: hidden;
     background-size: cover;
-    background-image:url('/src/currency_flags/rectangle_fallback.png');
   }
-  
-  .currency-flag-sm {
-    width: 16px;
-    height: 10px;
-  }
-  
-  .currency-flag-lg {
-    width: 36px;
-    height: 24px;
-  }
-  
-  .currency-flag-xl {
-    width: 48px;
-    height: 32px;
-  }
-  .currency-flag.currency-flag-aed{background-image:url('/src/currency_flags/aed.png');}
-  .currency-flag.currency-flag-afn{background-image:url('/src/currency_flags/afn.png');}
-  .currency-flag.currency-flag-all{background-image:url('/src/currency_flags/all.png');}
-  .currency-flag.currency-flag-amd{background-image:url('/src/currency_flags/amd.png');}
-  .currency-flag.currency-flag-ang{background-image:url('/src/currency_flags/ang.png');}
-  .currency-flag.currency-flag-aoa{background-image:url('/src/currency_flags/aoa.png');}
-  .currency-flag.currency-flag-ars{background-image:url('/src/currency_flags/ars.png');}
-  .currency-flag.currency-flag-aud{background-image:url('/src/currency_flags/aud.png');}
-  .currency-flag.currency-flag-awg{background-image:url('/src/currency_flags/awg.png');}
-  .currency-flag.currency-flag-azn{background-image:url('/src/currency_flags/azn.png');}
-  .currency-flag.currency-flag-bam{background-image:url('/src/currency_flags/bam.png');}
-  .currency-flag.currency-flag-bbd{background-image:url('/src/currency_flags/bbd.png');}
-  .currency-flag.currency-flag-bdt{background-image:url('/src/currency_flags/bdt.png');}
-  .currency-flag.currency-flag-bgn{background-image:url('/src/currency_flags/bgn.png');}
-  .currency-flag.currency-flag-bhd{background-image:url('/src/currency_flags/bhd.png');}
-  .currency-flag.currency-flag-bif{background-image:url('/src/currency_flags/bif.png');}
-  .currency-flag.currency-flag-bmd{background-image:url('/src/currency_flags/bmd.png');}
-  .currency-flag.currency-flag-bnd{background-image:url('/src/currency_flags/bnd.png');}
-  .currency-flag.currency-flag-bob{background-image:url('/src/currency_flags/bob.png');}
-  .currency-flag.currency-flag-brl{background-image:url('/src/currency_flags/brl.png');}
-  .currency-flag.currency-flag-bsd{background-image:url('/src/currency_flags/bsd.png');}
-  .currency-flag.currency-flag-btn{background-image:url('/src/currency_flags/btn.png');}
-  .currency-flag.currency-flag-bwp{background-image:url('/src/currency_flags/bwp.png');}
-  .currency-flag.currency-flag-byn{background-image:url('/src/currency_flags/byn.png');}
-  .currency-flag.currency-flag-bzd{background-image:url('/src/currency_flags/bzd.png');}
-  .currency-flag.currency-flag-cad{background-image:url('/src/currency_flags/cad.png');}
-  .currency-flag.currency-flag-cdf{background-image:url('/src/currency_flags/cdf.png');}
-  .currency-flag.currency-flag-chf{background-image:url('/src/currency_flags/chf.png');}
-  .currency-flag.currency-flag-clp{background-image:url('/src/currency_flags/clp.png');}
-  .currency-flag.currency-flag-cny{background-image:url('/src/currency_flags/cny.png');}
-  .currency-flag.currency-flag-cop{background-image:url('/src/currency_flags/cop.png');}
-  .currency-flag.currency-flag-crc{background-image:url('/src/currency_flags/crc.png');}
-  .currency-flag.currency-flag-cup{background-image:url('/src/currency_flags/cup.png');}
-  .currency-flag.currency-flag-cve{background-image:url('/src/currency_flags/cve.png');}
-  .currency-flag.currency-flag-czk{background-image:url('/src/currency_flags/czk.png');}
-  .currency-flag.currency-flag-djf{background-image:url('/src/currency_flags/djf.png');}
-  .currency-flag.currency-flag-dkk{background-image:url('/src/currency_flags/dkk.png');}
-  .currency-flag.currency-flag-dop{background-image:url('/src/currency_flags/dop.png');}
-  .currency-flag.currency-flag-dzd{background-image:url('/src/currency_flags/dzd.png');}
-  .currency-flag.currency-flag-egp{background-image:url('/src/currency_flags/egp.png');}
-  .currency-flag.currency-flag-ern{background-image:url('/src/currency_flags/ern.png');}
-  .currency-flag.currency-flag-etb{background-image:url('/src/currency_flags/etb.png');}
-  .currency-flag.currency-flag-eur{background-image:url('/src/currency_flags/eur.png');}
-  .currency-flag.currency-flag-fjd{background-image:url('/src/currency_flags/fjd.png');}
-  .currency-flag.currency-flag-fkp{background-image:url('/src/currency_flags/fkp.png');}
-  .currency-flag.currency-flag-gbp{background-image:url('/src/currency_flags/gbp.png');}
-  .currency-flag.currency-flag-gel{background-image:url('/src/currency_flags/gel.png');}
-  .currency-flag.currency-flag-ghs{background-image:url('/src/currency_flags/ghs.png');}
-  .currency-flag.currency-flag-gip{background-image:url('/src/currency_flags/gip.png');}
-  .currency-flag.currency-flag-gmd{background-image:url('/src/currency_flags/gmd.png');}
-  .currency-flag.currency-flag-gnf{background-image:url('/src/currency_flags/gnf.png');}
-  .currency-flag.currency-flag-gtq{background-image:url('/src/currency_flags/gtq.png');}
-  .currency-flag.currency-flag-gyd{background-image:url('/src/currency_flags/gyd.png');}
-  .currency-flag.currency-flag-hkd{background-image:url('/src/currency_flags/hkd.png');}
-  .currency-flag.currency-flag-hnl{background-image:url('/src/currency_flags/hnl.png');}
-  .currency-flag.currency-flag-hrk{background-image:url('/src/currency_flags/hrk.png');}
-  .currency-flag.currency-flag-htg{background-image:url('/src/currency_flags/htg.png');}
-  .currency-flag.currency-flag-huf{background-image:url('/src/currency_flags/huf.png');}
-  .currency-flag.currency-flag-idr{background-image:url('/src/currency_flags/idr.png');}
-  .currency-flag.currency-flag-ils{background-image:url('/src/currency_flags/ils.png');}
-  .currency-flag.currency-flag-inr{background-image:url('/src/currency_flags/inr.png');}
-  .currency-flag.currency-flag-iqd{background-image:url('/src/currency_flags/iqd.png');}
-  .currency-flag.currency-flag-irr{background-image:url('/src/currency_flags/irr.png');}
-  .currency-flag.currency-flag-isk{background-image:url('/src/currency_flags/isk.png');}
-  .currency-flag.currency-flag-jmd{background-image:url('/src/currency_flags/jmd.png');}
-  .currency-flag.currency-flag-jod{background-image:url('/src/currency_flags/jod.png');}
-  .currency-flag.currency-flag-jpy{background-image:url('/src/currency_flags/jpy.png');}
-  .currency-flag.currency-flag-kes{background-image:url('/src/currency_flags/kes.png');}
-  .currency-flag.currency-flag-kgs{background-image:url('/src/currency_flags/kgs.png');}
-  .currency-flag.currency-flag-khr{background-image:url('/src/currency_flags/khr.png');}
-  .currency-flag.currency-flag-kmf{background-image:url('/src/currency_flags/kmf.png');}
-  .currency-flag.currency-flag-kpw{background-image:url('/src/currency_flags/kpw.png');}
-  .currency-flag.currency-flag-krw{background-image:url('/src/currency_flags/krw.png');}
-  .currency-flag.currency-flag-kwd{background-image:url('/src/currency_flags/kwd.png');}
-  .currency-flag.currency-flag-kyd{background-image:url('/src/currency_flags/kyd.png');}
-  .currency-flag.currency-flag-kzt{background-image:url('/src/currency_flags/kzt.png');}
-  .currency-flag.currency-flag-lak{background-image:url('/src/currency_flags/lak.png');}
-  .currency-flag.currency-flag-lbp{background-image:url('/src/currency_flags/lbp.png');}
-  .currency-flag.currency-flag-lkr{background-image:url('/src/currency_flags/lkr.png');}
-  .currency-flag.currency-flag-lrd{background-image:url('/src/currency_flags/lrd.png');}
-  .currency-flag.currency-flag-ltl{background-image:url('/src/currency_flags/ltl.png');}
-  .currency-flag.currency-flag-lyd{background-image:url('/src/currency_flags/lyd.png');}
-  .currency-flag.currency-flag-mad{background-image:url('/src/currency_flags/mad.png');}
-  .currency-flag.currency-flag-mdl{background-image:url('/src/currency_flags/mdl.png');}
-  .currency-flag.currency-flag-mga{background-image:url('/src/currency_flags/mga.png');}
-  .currency-flag.currency-flag-mkd{background-image:url('/src/currency_flags/mkd.png');}
-  .currency-flag.currency-flag-mmk{background-image:url('/src/currency_flags/mmk.png');}
-  .currency-flag.currency-flag-mnt{background-image:url('/src/currency_flags/mnt.png');}
-  .currency-flag.currency-flag-mop{background-image:url('/src/currency_flags/mop.png');}
-  .currency-flag.currency-flag-mro{background-image:url('/src/currency_flags/mro.png');}
-  .currency-flag.currency-flag-mur{background-image:url('/src/currency_flags/mur.png');}
-  .currency-flag.currency-flag-mvr{background-image:url('/src/currency_flags/mvr.png');}
-  .currency-flag.currency-flag-mwk{background-image:url('/src/currency_flags/mwk.png');}
-  .currency-flag.currency-flag-mxn{background-image:url('/src/currency_flags/mxn.png');}
-  .currency-flag.currency-flag-myr{background-image:url('/src/currency_flags/myr.png');}
-  .currency-flag.currency-flag-mzn{background-image:url('/src/currency_flags/mzn.png');}
-  .currency-flag.currency-flag-nad{background-image:url('/src/currency_flags/nad.png');}
-  .currency-flag.currency-flag-ngn{background-image:url('/src/currency_flags/ngn.png');}
-  .currency-flag.currency-flag-nio{background-image:url('/src/currency_flags/nio.png');}
-  .currency-flag.currency-flag-nok{background-image:url('/src/currency_flags/nok.png');}
-  .currency-flag.currency-flag-npr{background-image:url('/src/currency_flags/npr.png');}
-  .currency-flag.currency-flag-nzd{background-image:url('/src/currency_flags/nzd.png');}
-  .currency-flag.currency-flag-omr{background-image:url('/src/currency_flags/omr.png');}
-  .currency-flag.currency-flag-pen{background-image:url('/src/currency_flags/pen.png');}
-  .currency-flag.currency-flag-pgk{background-image:url('/src/currency_flags/pgk.png');}
-  .currency-flag.currency-flag-php{background-image:url('/src/currency_flags/php.png');}
-  .currency-flag.currency-flag-pkr{background-image:url('/src/currency_flags/pkr.png');}
-  .currency-flag.currency-flag-pln{background-image:url('/src/currency_flags/pln.png');}
-  .currency-flag.currency-flag-pyg{background-image:url('/src/currency_flags/pyg.png');}
-  .currency-flag.currency-flag-qar{background-image:url('/src/currency_flags/qar.png');}
-  .currency-flag.currency-flag-ron{background-image:url('/src/currency_flags/ron.png');}
-  .currency-flag.currency-flag-rsd{background-image:url('/src/currency_flags/rsd.png');}
-  .currency-flag.currency-flag-rub{background-image:url('/src/currency_flags/rub.png');}
-  .currency-flag.currency-flag-rwf{background-image:url('/src/currency_flags/rwf.png');}
-  .currency-flag.currency-flag-sar{background-image:url('/src/currency_flags/sar.png');}
-  .currency-flag.currency-flag-sbd{background-image:url('/src/currency_flags/sbd.png');}
-  .currency-flag.currency-flag-scr{background-image:url('/src/currency_flags/scr.png');}
-  .currency-flag.currency-flag-sek{background-image:url('/src/currency_flags/sek.png');}
-  .currency-flag.currency-flag-sgd{background-image:url('/src/currency_flags/sgd.png');}
-  .currency-flag.currency-flag-shp{background-image:url('/src/currency_flags/shp.png');}
-  .currency-flag.currency-flag-sll{background-image:url('/src/currency_flags/sll.png');}
-  .currency-flag.currency-flag-sos{background-image:url('/src/currency_flags/sos.png');}
-  .currency-flag.currency-flag-srd{background-image:url('/src/currency_flags/srd.png');}
-  .currency-flag.currency-flag-std{background-image:url('/src/currency_flags/std.png');}
-  .currency-flag.currency-flag-svc{background-image:url('/src/currency_flags/svc.png');}
-  .currency-flag.currency-flag-syp{background-image:url('/src/currency_flags/syp.png');}
-  .currency-flag.currency-flag-szl{background-image:url('/src/currency_flags/szl.png');}
-  .currency-flag.currency-flag-thb{background-image:url('/src/currency_flags/thb.png');}
-  .currency-flag.currency-flag-tjs{background-image:url('/src/currency_flags/tjs.png');}
-  .currency-flag.currency-flag-tnd{background-image:url('/src/currency_flags/tnd.png');}
-  .currency-flag.currency-flag-top{background-image:url('/src/currency_flags/top.png');}
-  .currency-flag.currency-flag-try{background-image:url('/src/currency_flags/try.png');}
-  .currency-flag.currency-flag-ttd{background-image:url('/src/currency_flags/ttd.png');}
-  .currency-flag.currency-flag-twd{background-image:url('/src/currency_flags/twd.png');}
-  .currency-flag.currency-flag-tzs{background-image:url('/src/currency_flags/tzs.png');}
-  .currency-flag.currency-flag-uah{background-image:url('/src/currency_flags/uah.png');}
-  .currency-flag.currency-flag-ugx{background-image:url('/src/currency_flags/ugx.png');}
-  .currency-flag.currency-flag-usd{background-image:url('/src/currency_flags/usd.png');}
-  .currency-flag.currency-flag-uyu{background-image:url('/src/currency_flags/uyu.png');}
-  .currency-flag.currency-flag-uzs{background-image:url('/src/currency_flags/uzs.png');}
-  .currency-flag.currency-flag-vef{background-image:url('/src/currency_flags/vef.png');}
-  .currency-flag.currency-flag-vnd{background-image:url('/src/currency_flags/vnd.png');}
-  .currency-flag.currency-flag-vuv{background-image:url('/src/currency_flags/vuv.png');}
-  .currency-flag.currency-flag-wst{background-image:url('/src/currency_flags/wst.png');}
-  .currency-flag.currency-flag-xaf{background-image:url('/src/currency_flags/xaf.png');}
-  .currency-flag.currency-flag-xcd{background-image:url('/src/currency_flags/xcd.png');}
-  .currency-flag.currency-flag-xof{background-image:url('/src/currency_flags/xof.png');}
-  .currency-flag.currency-flag-xpf{background-image:url('/src/currency_flags/xpf.png');}
-  .currency-flag.currency-flag-yer{background-image:url('/src/currency_flags/yer.png');}
-  .currency-flag.currency-flag-zar{background-image:url('/src/currency_flags/zar.png');}
-  .currency-flag.currency-flag-zmw{background-image:url('/src/currency_flags/zmw.png');}  
+
 }
