--- a/src/components/shared/converter.scss
+++ b/src/components/shared/converter.scss
@@ -2,6 +2,107 @@
 @import '../../stylesheets/design_vars.scss';
 .currency-inputs {
   margin-top: 29px;
+  min-height: 196px;
+  box-sizing: border-box;
+  position: relative;
+  .fade-enter {
+    display: block;
+    opacity: 0;
+  }
+  .fade-enter.fade-enter-active {
+    display: block;
+    opacity: 1;
+    transition-duration: 0.6s;
+    transition-property: opacity;
+    transition-timing-function: ease;
+  }
+  .fade-appear-done, .fade-enter-done {
+    display: block;
+    opacity: 1;
+  }
+  .fade-enter-done {
+    display: block;
+    opacity: 1;
+  }
+  .fade-exit {
+    display: block;
+    opacity: 1;
+  }
+  .fade-exit.fade-exit-active {
+    display: block;
+    opacity: 0;
+    transition-duration: 0.6s;
+    transition-property: opacity;
+    transition-timing-function: ease;
+  }
+  .fade-exit-done {
+    opacity: 0;
+    display: none;
+  }
+}
+.loader {
+  font-size: 6px;
+  text-indent: -9999em;
+  width: 11em;
+  height: 11em;
+  border-radius: 50%;
+  background: #6fc1e6;
+  background: -moz-linear-gradient(left, #6fc1e6 10%, rgba(111,193,230, 0) 42%);
+  background: -webkit-linear-gradient(left, #6fc1e6 10%, rgba(111,193,230, 0) 42%);
+  background: -o-linear-gradient(left, #6fc1e6 10%, rgba(111,193,230, 0) 42%);
+  background: -ms-linear-gradient(left, #6fc1e6 10%, rgba(111,193,230, 0) 42%);
+  background: linear-gradient(to right, #6fc1e6 10%, rgba(111,193,230, 0) 42%);
+  position: absolute;
+  left: calc(50% - 33px);
+  top: 30%;
+  -webkit-animation: load3 1.4s infinite linear;
+  animation: load3 1.4s infinite linear;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #6fc1e6;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+}
+.loader:after {
+  background: #ffffff;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: '';
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+@-webkit-keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 @media screen and (max-width: $breakpoint-small) {
 }
